--- a/lessons/01-setting-up/package.json
+++ b/lessons/01-setting-up/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "tutorial",
+  "name": "react-router",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --inline --content-base ."
+//    "dev:local": "NODE_ENV=development node build/webpack.dev.js --hot",
+    
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +16,20 @@
     "react-router": "^2.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.0.7",
     "http-server": "^0.8.5",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "react": "^0.14.9",
+    "react-dom": "^0.14.9",
+    "style-loader": "^0.20.3",
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
   }
 }
